--- a/atv6.html
+++ b/atv6.html
@@ -7,6 +7,16 @@
     <title>DCC121 ATV6</title>
 </head>
 <body>
-    
+    <header>
+        <h1>DCC121 ATV6</h1>
+    </header>
+
+    <main>
+    </main>
+
+    <footer>
+        <p>&copy; Hiago Fiochi - 2023</p>
+    </footer>
+
 </body>
 </html>
